Ensure that bubbles are initially placed without overlap.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -7,3 +7,11 @@ canvas {
   top: 0;
   left: 0;
 }
+
+circle {
+  fill: #a09487;
+  stroke: #b9afa5;
+  stroke-opacity: 1;
+  stroke-width: 2.5;
+}
+
